Services/lb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lb-pod
  labels:
    app: lb-example
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
