Services/service-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-server-pod
  labels:
    app: service-server
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
