Services/loadbalancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-example
spec:
  selector:
    app: lb-example
  type: LoadBalancer
  ports:
  - port: 80 
    targetPort: 80
