Services/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
      app: service-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30080
