Services/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress 
spec:
  ingressClassName: nginx
  rules:
  - host: a24484ea87c0d4f4fb012b1200259a46-1331248784.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo 
            port:
              number: 80
